--- a/templates/main_site/catalog.html
+++ b/templates/main_site/catalog.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="text-center mt-16">
-        <button class="bg-white text-[#0E0E10] font-bold py-3 px-8 rounded-full hover:bg-gray-200 transition-colors duration-300 inline-flex items-center justify-center">Загрузить ещё</button>
+        <button class="btn">Загрузить ещё</button>
     </div>
 </section>
 {% endblock %}
