--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,18 +16,21 @@
 
     <header class="py-6 flex justify-between items-center">
         <a href="{{ url_for('main_site.index') }}" class="text-2xl font-bold text-white tracking-wider">HJR</a>
-        <nav class="hidden md:flex items-center space-x-8 text-white">
-            <a href="{{ url_for('main_site.new_reviews') }}" class="hover:opacity-75 transition-opacity">Новые</a>
-            <a href="{{ url_for('main_site.about') }}" class="hover:opacity-75 transition-opacity">О нас</a>
-            <a href="{{ url_for('main_site.discussed') }}" class="hover:opacity-75 transition-opacity">Обсуждаемое</a>
-            <a href="{{ url_for('main_site.reviews') }}" class="hover:opacity-75 transition-opacity">Рецензии</a>
-            <a href="{{ url_for('bot_portal.showcase') }}" class="text-indigo-400 hover:opacity-75 transition-opacity">Портал бота</a>
-        </nav>
-        <a href="{{ url_for('main_site.login') }}" id="user-icon" class="text-white hover:opacity-75 transition-opacity">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-            </svg>
-        </a>
+
+        <div class="flex items-center gap-x-8">
+            <nav class="hidden md:flex items-center space-x-8 text-white">
+                <a href="{{ url_for('main_site.new_reviews') }}" class="hover:opacity-75 transition-opacity">Новые</a>
+                <a href="{{ url_for('main_site.about') }}" class="hover:opacity-75 transition-opacity">О нас</a>
+                <a href="{{ url_for('main_site.discussed') }}" class="hover:opacity-75 transition-opacity">Обсуждаемое</a>
+                <a href="{{ url_for('main_site.reviews') }}" class="hover:opacity-75 transition-opacity">Рецензии</a>
+                <a href="{{ url_for('bot_portal.showcase') }}" class="text-indigo-400 hover:opacity-75 transition-opacity">Портал бота</a>
+            </nav>
+            <a href="{{ url_for('main_site.login') }}" id="user-icon" class="text-white hover:opacity-75 transition-opacity">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                </svg>
+            </a>
+        </div>
     </header>
 
     <main>
@@ -37,17 +40,18 @@
 </div>
 
 <footer class="mt-24 border-t border-[#232325]">
-    <div class="max-w-[1440px] mx-auto px-6 sm:px-8 md:px-16 py-12"> <div class="flex flex-col md:flex-row justify-between items-center gap-8">
-        <a href="{{ url_for('main_site.index') }}" class="text-2xl font-bold text-white tracking-wider">HJR</a>
-        <div class="flex items-center space-x-8 text-white">
-            <a href="{{ url_for('main_site.new_reviews') }}" class="hover:opacity-75 transition-opacity">Новые</a>
-            <a href="{{ url_for('main_site.discussed') }}" class="hover:opacity-75 transition-opacity">Обсуждаемое</a>
-            <a href="{{ url_for('main_site.reviews') }}" class="hover:opacity-75 transition-opacity">Рецензии</a>
-            <a href="{{ url_for('main_site.about') }}" class="hover:opacity-75 transition-opacity">О нас</a>
+    <div class="max-w-[1440px] mx-auto px-6 sm:px-8 md:px-16 py-12">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-8">
+            <a href="{{ url_for('main_site.index') }}" class="text-2xl font-bold text-white tracking-wider">HJR</a>
+            <div class="flex items-center space-x-8 text-white">
+                <a href="{{ url_for('main_site.new_reviews') }}" class="hover:opacity-75 transition-opacity">Новые</a>
+                <a href="{{ url_for('main_site.discussed') }}" class="hover:opacity-75 transition-opacity">Обсуждаемое</a>
+                <a href="{{ url_for('main_site.reviews') }}" class="hover:opacity-75 transition-opacity">Рецензии</a>
+                <a href="{{ url_for('main_site.about') }}" class="hover:opacity-75 transition-opacity">О нас</a>
+            </div>
+            <div class="flex items-center space-x-6">
+            </div>
         </div>
-        <div class="flex items-center space-x-6">
-        </div>
-    </div>
         <div class="mt-8 pt-8 border-t border-[#232325] text-sm text-[#8F8F90] flex flex-col md:flex-row justify-between items-center gap-4">
             <p>&copy; 2025 Honji Review</p>
             <p><a href="{{ url_for('main_site.privacy_policy') }}" class="hover:text-white">Privacy Policy</a></p>
