--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="{{ url_for('main_site.static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="shortcut icon" href="{{ url_for('main_site.static', filename='images/favicon.png') }}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{{ url_for('main_site.static', filename='css/main_site.css') }}">
+    <link rel="stylesheet" href="{{ url_for('main_site.static', filename='css/main_site.css') }}?v=1.1">
     {% block head_css %}{% endblock %}
 </head>
 <body class="bg-[#0E0E10] text-[#EAEAEA]">
@@ -26,7 +26,7 @@
                 <a href="{{ url_for('bot_portal.showcase') }}" class="text-indigo-400 hover:opacity-75 transition-opacity">Портал бота</a>
             </nav>
             <a href="{{ url_for('main_site.login') }}" id="user-icon" class="text-white hover:opacity-75 transition-opacity">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                 </svg>
             </a>
