--- a/templates/main_site/catalog.html
+++ b/templates/main_site/catalog.html
@@ -10,7 +10,7 @@
             </svg>
             <span>Назад</span>
         </a>
-        <h1 class="text-5xl sm:text-7xl md:text-8xl font-extrabold text-white tracking-tighter text-center">{{ page_title }}</h1>
+        <h1 class="page-title">{{ page_title }}</h1>
     </div>
 
     <div class="flex items-center space-x-6 mb-12">
