--- a/templates/main_site/privacy_policy.html
+++ b/templates/main_site/privacy_policy.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="py-12 max-w-4xl mx-auto">
     <div class="text-center mb-12">
-        <h1 class="text-4xl font-bold">Политика конфиденциальности</h1>
+        <h1 class="page-title">Политика конфиденциальности</h1>
         <p class="text-slate-400 mt-2">Последнее обновление: 28 августа 2025 г.</p>
     </div>
 
