--- a/templates/main_site/index.html
+++ b/templates/main_site/index.html
@@ -2,7 +2,7 @@
 {% block title %}Главная - Honji Review{% endblock %}
 
 {% block content %}
-<section class="pt-20 pb-28 text-center md:text-left">
+<section id="hero-section" class="pt-20 text-center md:text-left">
     <p class="text-lg text-center text-white mb-10">«Чтение — это способ взглянуть на мир чужими глазами.»</p>
     <div class="max-w-4xl mx-auto md:mx-0">
         <h1 class="text-4xl sm:text-6xl md:text-[80px] font-extrabold text-white leading-none tracking-tighter">
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="py-24">
+<section id="genres-section" class="py-24">
     <h2 class="section-title text-center mb-16">Жанры</h2>
     <div class="max-w-lg mx-auto">
         <div class="border-y border-[#232325]">
@@ -91,7 +91,7 @@
 
 <section class="py-12">
     <div class="bg-white/5 backdrop-blur-md rounded-2xl p-6 sm:p-12 text-center border border-white/10">
-        <h2 class="section-title text-center">Начать продвижение</h2>
+        <h2 class="promotion-title section-title text-center">Начать продвижение</h2>
         <p class="mt-4 text-[#8F8F90]">Напишем рецензию на вашу работу, чтобы она вышла за пределы парти-занского маркетинга.</p>
         <form class="mt-10 max-w-3xl mx-auto flex flex-col md:flex-row gap-6 items-center">
             <input type="text" name="name" placeholder="Name *" class="bg-transparent border-b border-[#313134] w-full py-3 px-1 text-white placeholder-slate-500 focus:outline-none focus:border-white transition">
