--- a/templates/main_site/index.html
+++ b/templates/main_site/index.html
@@ -2,7 +2,7 @@
 {% block title %}Главная - Honji Review{% endblock %}
 
 {% block content %}
-<section id="hero-section" class="pt-20 text-center md:text-left">
+<section id="hero-section" class="text-center md:text-left">
     <p class="text-lg text-center text-white mb-10">«Чтение — это способ взглянуть на мир чужими глазами.»</p>
     <div class="max-w-4xl mx-auto md:mx-0">
         <h1 class="text-4xl sm:text-6xl md:text-[80px] font-extrabold text-white leading-none tracking-tighter">
@@ -17,7 +17,7 @@
     </div>
 </section>
 
-<section class="py-24">
+<section class="py-24 pt-12 md:pt-24"> {# ИЗМЕНЕНИЕ: Немного уменьшен padding-top на мобильных, чтобы "Honji Review" немного выглядывал #}
     <div class="text-center max-w-4xl mx-auto">
         <h2 class="section-title text-center">Honji Review</h2>
         <p class="mt-6 text-[#EAEAEA] text-lg leading-relaxed">
