--- a/templates/main_site/index.html
+++ b/templates/main_site/index.html
@@ -17,7 +17,7 @@
     </div>
 </section>
 
-<section class="py-24 pt-12 md:pt-24"> {# ИЗМЕНЕНИЕ: Немного уменьшен padding-top на мобильных, чтобы "Honji Review" немного выглядывал #}
+<section class="py-12">
     <div class="text-center max-w-4xl mx-auto">
         <h2 class="section-title text-center">Honji Review</h2>
         <p class="mt-6 text-[#EAEAEA] text-lg leading-relaxed">
